added tests and edited code